- Prevent wrapping menu items
git-svn-id: http://svn.ez.no/svn/extensions/ezwebin/trunk@3838 49f50cf4-cce6-0310-bc1e-a21d999f3d8f

--- a/packages/ezwebin_extension/ezextension/ezwebin/design/ezwebin/stylesheets/pagelayout.css
+++ b/packages/ezwebin_extension/ezextension/ezwebin/design/ezwebin/stylesheets/pagelayout.css
@@ -148,6 +148,7 @@ div#topmenu ul li
     margin: 0;
     padding: 0;
     font-size: 0.85em;
+    white-space: nowrap;
 }
 
 div#topmenu ul li
